samples/_failures_safe/1761477190_ef1261_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c652a217.c: In function ‘main’:
./samples/SAFE/__tmp_c652a217.c:178:58: error: expected ‘)’ at end of input
  178 |     if (!tokenize(input, tokens, MAX_TOKENS, &token_count
      |                  ~                                       ^
      |                                                          )
./samples/SAFE/__tmp_c652a217.c:178:5: error: expected declaration or statement at end of input
  178 |     if (!tokenize(input, tokens, MAX_TOKENS, &token_count
      |     ^~
